<resources>
    <string name="app_name">Shadow Boxer</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="ready">Ready</string>
    <string name="gloves_connected">Connected</string>
    <string name="gloves_disconnected">Disconnected</string>
    <string name="action_training">Train</string>
    <string name="action_training_session_history">Training History</string>
    <string name="button_2_minute">2 minute combos</string>
    <string name="button_4_minutes">4 minute combos</string>
    <string name="button_10_minutes">10 minute combos</string>
    <string name="button_unlimited">unlimited combos</string>
    <string name="title_training_session_history">Training History</string>
    <string name="button_end_session">End Session</string>
    <string name="title_train">Train</string>
    <string name="title_training_complete">Training Complete</string>
    <string name="complete_combos">Combos</string>
    <string name="completed_punches_label">Punches</string>
    <string name="completed_minutes">Duration</string>
    <string name="completed_accuracy">Correct</string>
    <string name="home_btn">Finish</string>
    <string name="max_punch_strength">Force</string>
    <string name="punches_per_second">Punches/Sec</string>
    <string name="history_chart_duration">Last 30 days</string>
    <string name="list_separator">-</string>
    <string name="history_session_duration_chart_title">Session Duration</string>
</resources>
